docs/assets/css/frb.css
@media print, screen and (max-width: 1060px) {
    nav {
        display: block;
        float: none;
        position: relative;
        margin:200px 0 0 0;
        width: 590px;
        max-width: 600px;
        padding: 30px 30px 50px 30px;
        background: #fbfbfb;
        border-radius: 3px;
        border: 1px solid #e5e5e5;
        box-shadow:
            0px 1px 2px rgba(0,0,0,0.09), 
            inset 0px 0px 2px 2px rgba(255,255,255,0.5), 
            inset 0 0 5px 5px rgba(255,255,255,0.4);
    }
}

